feat(todo): Integrate Todo App with PostgreSQL using sqlc
