# internal/adapters/db/models.go
@@ -1,0 +1,18 @@
+// Code generated by sqlc. DO NOT EDIT.
+// versions:
+//   sqlc v1.29.0
+
+package db
+
+import (
+	"database/sql"
+	"time"
+)
+
+type Todo struct {
+	ID          int32
+	Title       string
+	Description string
+	CreatedAt   time.Time
+	Finished    sql.NullBool
+}
