# internal/ports/http/todo/handler.go
@@ -1,9 +1,10 @@
 package todo
 
 import (
+	"encoding/json"
 	"net/http"
-	"time"
 	"todo-app/internal/app"
+	"todo-app/internal/domain/todo"
 	"todo-app/internal/ports/constants"
 	"todo-app/pkg/core/errors"
 	"todo-app/pkg/core/http/response"
@@ -18,35 +19,58 @@ func NewTodoHandler(app app.Application) TodoHandler {
 }
 
 // (DELETE /todo/{id})
-func (h TodoHandler) DeleteTodo(w http.ResponseWriter, r *http.Request, id string) {
-	panic("not implemented") // TODO: Implement
+func (h TodoHandler) DeleteTodo(w http.ResponseWriter, r *http.Request, id int) {
+	err := h.app.TodoRepository.Delete(int32(id))
+	if err != nil {
+		response.RespondError(w, r, constants.TodoMessageIdConstants.DeleteTodo(), errors.FromError(err))
+		return
+	}
+	response.RespondSuccess(w, r, constants.TodoMessageIdConstants.DeleteTodo(), nil)
 }
 
 // (GET /todo/{id})
-func (h TodoHandler) GetTodo(w http.ResponseWriter, r *http.Request, id string) {
-	response.RespondSuccess(w, r, constants.TodoMessageIdConstants.GetTodo(), Todo{
-		Id:            id,
-		Title:         "Test",
-		Completed:     false,
-		CreatedAt:     time.Now(),
-		LastUpdatedAt: time.Now(),
-	})
+func (h TodoHandler) GetTodo(w http.ResponseWriter, r *http.Request, id int) {
+	todo, err := h.app.TodoRepository.Get(int32(id))
+	if err != nil {
+		response.RespondError(w, r, constants.TodoMessageIdConstants.GetTodo(), errors.FromError(err))
+		return
+	}
+	response.RespondSuccess(w, r, constants.TodoMessageIdConstants.GetTodo(), todo)
 }
 
 // (PUT /todo/{id})
-func (h TodoHandler) UpdateTodo(w http.ResponseWriter, r *http.Request, id string) {
+func (h TodoHandler) UpdateTodo(w http.ResponseWriter, r *http.Request, id int) {
 	panic("not implemented") // TODO: Implement
 }
 
 // (GET /todos)
 func (h TodoHandler) GetTodos(w http.ResponseWriter, r *http.Request) {
-	response.RespondError(w, r, constants.TodoMessageIdConstants.GetTodo(), errors.SimpleShynobiError{
-		Message: "test",
-		Code:    constants.TodoErrorCodeConstants.Unimplemented(),
-	})
+	todos, err := h.app.TodoRepository.All()
+	if err != nil {
+		response.RespondError(w, r, constants.TodoMessageIdConstants.GetTodo(), errors.FromError(err))
+		return
+	}
+	response.RespondSuccess(w, r, constants.TodoMessageIdConstants.GetTodo(), todos)
 }
 
 // (POST /todos)
 func (h TodoHandler) CreateTodo(w http.ResponseWriter, r *http.Request) {
-	panic("not implemented") // TODO: Implement
+	var createTodoDto CreateTodoDto
+	err := json.NewDecoder(r.Body).Decode(&createTodoDto)
+	if err != nil {
+		response.RespondError(w, r, constants.TodoMessageIdConstants.CreateTodo(), errors.FromError(err))
+		return
+	}
+
+	todo, err := h.app.TodoRepository.Create(todo.Todo{
+		Title:       createTodoDto.Title,
+		Description: createTodoDto.Description,
+	})
+
+	if err != nil {
+		response.RespondError(w, r, constants.TodoMessageIdConstants.CreateTodo(), errors.FromError(err))
+		return
+	}
+
+	response.RespondSuccess(w, r, constants.TodoMessageIdConstants.CreateTodo(), todo)
 }
